tests/baselines/reference/classHeritageWithTrailingSeparator.errors.txt
==== tests/cases/compiler/classHeritageWithTrailingSeparator.ts (1 errors) ====
    class C { foo: number }
    class D extends C, {
                     ~
!!! classHeritageWithTrailingSeparator.ts(2,18): error TS1009: Trailing separator not allowed.
    }